# PostQuantumEVM

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile.pq-reth  LICENSE  README.md  TODO.md  docker-compose.yml
MEMORIA_TFG/: .gitignore  README.md  bibliografia.bib  main.tex
MEMORIA_TFG/anexos/: anexo_01_iag.tex  anexo_02.tex  anexo_03.tex  anexo_04_resultados_aprendizaje.tex
MEMORIA_TFG/capitulos/: 01_introduccion.tex  02_marco_teorico.tex  03_analisis_situacion.tex  04_desarrollo.tex  05_resultados.tex  06_conclusiones.tex
MEMORIA_TFG/configuracion/: comandos.tex  datos.tex  estilos.tex  paquetes.tex
MEMORIA_TFG/preliminares/: abstract.tex  agradecimientos.tex  dedicatoria.tex  resumen.tex
benchmarks/: Cargo.toml
benchmarks/benches/: crypto_ops.rs  tx_encoding.rs
benchmarks/src/: lib.rs
blockchain-core/: Cargo.toml
blockchain-core/examples/: consensus_demo.rs
blockchain-core/src/: block.rs  blockchain.rs  lib.rs  logger.rs  main.rs  pow.rs
blockchain-core/src/consensus/: mod.rs  pbft.rs  poa.rs  pob.rs  poc.rs  poet.rs  poh.rs  pos.rs  pow.rs  traits.rs
cli/: Cargo.toml
cli/src/: main.rs
contracts/: README.md
contracts/src/: PQAccessControl.sol  PQHash.sol  PQMultiSig.sol  PQVerify.sol
contracts/test/: PQGas.t.sol
corpus/: Corpus.md
docs/: CONSENSUS.md  GAS_COST_ANALYSIS.md  NODE.md  README.md  WALLET.md  architecture.excalidraw  benchmark_analysis.ipynb
e2e/: run-e2e.sh
e2e/fixtures/: e2e-keystore.json
e2e/k8s/: 00-namespace.yaml  01-genesis-configmap.yaml  02-poa-configs.yaml  03-services.yaml  04-validators-statefulset.yaml  README.md
eips/: eip-pq-tx.md
pq-wallet/: Cargo.toml  README.md
pq-wallet/pq-chain-seeder/: Cargo.toml
pq-wallet/pq-chain-seeder/src/: main.rs
pq-wallet/pq-e2e-test/: Cargo.toml
pq-wallet/pq-e2e-test/src/: main.rs
pq-wallet/pq-e2e-test/src/scenarios/: chain.rs  consensus.rs  contracts.rs  fees.rs  mod.rs  multinode.rs  runner.rs  transactions.rs
pq-wallet/pq-wallet-cli/: Cargo.toml
pq-wallet/pq-wallet-cli/src/: main.rs
pq-wallet/pq-wallet-core/: Cargo.toml
pq-wallet/pq-wallet-core/src/: error.rs  keygen.rs  keystore.rs  lib.rs  rpc.rs  signer.rs  tx.rs
pq-wallet/pq-wallet-tui/: Cargo.toml
pq-wallet/pq-wallet-tui/src/: app.rs  events.rs  main.rs  ui.rs
pqc-algorithms/: Cargo.toml
pqc-algorithms/src/ml-kem/: main.rs
qiskit-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
qiskit-api/examples/: grover.ipynb  keccak.ipynb  secp256k1.ipynb  shor.ipynb
qiskit-api/lib/: grover.py  keccak.ipynb  keccak_toy.py  secp256k1_toy.py  shor.py
qiskit-api/src/: main.py  models.py
qiskit-api/src/routers/: grover.py  shor.py
rust-blockchain/blockchain-core/src/: blockchain.rs  main.rs
scripts/: demo.sh  generate-validator-keys.sh  poa-config.example.json
scripts/validator-keys/: poa-config-1.json  poa-config-2.json  poa-config-3.json  seed-1.hex  seed-2.hex  seed-3.hex  validator-1.json  validator-2.json  validator-3.json
