[package]
name = "blockchain-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "blockchain_core"
path = "src/lib.rs"

[[bin]]
name = "blockchain-core"
path = "src/main.rs"

[[example]]
name = "consensus_demo"
path = "examples/consensus_demo.rs"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.9.2"