[project]
name = "qiskit-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "===3.13.12"
dependencies = [
    "fastapi>=0.131.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.2",
    "uvicorn>=0.41.0",
]
