[package]
name = "pq-wallet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Post-quantum wallet CLI — new, address, balance, send, sign"

[[bin]]
name = "pq-wallet"
path = "src/main.rs"

[dependencies]
pq-wallet-core = { workspace = true }
alloy-primitives = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
